--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh;">
         <h1 style="font-weight: bold; color: black; align-items: center; justify-content: center; font-size: 20px; padding-bottom: 2rem;">Yuichiro Barcode Generator</h1>
         <canvas width="100" height="100" style="border: 2px solid black; margin-bottom: 1rem;" id="canvas"></canvas>
-        <label style="font-weight: bold;">Enter for generate your barcode</label>
-        <input style="border: 2px solid black; width: 270px; margin-top: 1rem; text-align: center;" placeholder="paste your link here" id="qrInput" onchange="generateQR()"/>
-        <a href="https://qrcodescan.in" style="text-decoration: none; cursor: pointer; font-weight: bold; margin-top: 1rem;">Check yout barcode here</a>
+        <form onsubmit="generateQR(); return false;">
+            <label style="font-weight: bold;">Enter to generate your barcode</label>
+            <input style="border: 2px solid black; width: 270px; margin-top: 1rem; text-align: center;" placeholder="paste your link here" id="qrInput" oninput="generateQR()" />
+        </form>
+        <a href="https://qrcodescan.in" style="text-decoration: none; cursor: pointer; font-weight: bold; margin-top: 1rem;">Check your barcode here</a>
 
         <!-- Tombol unduh barcode -->
         <a id="downloadButton" download="barcode.png" style="display: none;">
@@ -39,12 +41,8 @@
                 // Tampilkan tombol unduh
                 document.getElementById('downloadButton').style.display = 'block';
 
-                // Sembunyikan tombol unduh sebelumnya
-                // (Saya hapus baris ini karena seharusnya tidak ada di sini)
-                // document.getElementById('downloadButton').style.display = 'none';
-
                 // Tampilkan alert setelah barcode terlihat
-                alert('Your barcode generated successfully! want to download your barcode?');
+                alert('Your barcode generated successfully! Want to download your barcode?');
             }, 500);
         }
 
