--- a/index.html
+++ b/index.html
@@ -3,15 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yuichro</title>
+    <title>Yuichro Barcode Generator</title>
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        div {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh;">
-        <h1 style="font-weight: bold; color: black; align-items: center; justify-content: center; font-size: 20px; padding-bottom: 2rem;">Yuichiro Barcode Generator</h1>
+    <div>
+        <h1 style="font-weight: bold; color: black; font-size: 20px; padding-bottom: 2rem;">Yuichiro Barcode Generator</h1>
         <canvas width="100" height="100" style="border: 2px solid black; margin-bottom: 1rem;" id="canvas"></canvas>
         <form onsubmit="generateQR(); return false;">
-            <label style="font-weight: bold;">Enter to generate your barcode</label>
-            <input style="border: 2px solid black; width: 270px; margin-top: 1rem; text-align: center;" placeholder="paste your link here" id="qrInput" oninput="generateQR()" />
+            <label style="font-weight: bold;">Enter to generate your barcode</label> 
+            <br>
+            <input style="border: 2px solid black; width: 270px; margin-top: 1rem; text-align: center; margin-bottom: 1rem;" placeholder="paste your link here" id="qrInput" oninput="generateQR()" />
         </form>
         <a href="https://qrcodescan.in" style="text-decoration: none; cursor: pointer; font-weight: bold; margin-top: 1rem;">Check your barcode here</a>
 
@@ -19,7 +33,7 @@
         <a id="downloadButton" download="barcode.png" style="display: none;">
             <button onclick="downloadQR()" style="margin-top: 1rem; border: 2px solid white; height: 50px; border-radius: 5px; background-color:#0d6efd; color: white; font-weight: bold; cursor: pointer;">Download Barcode</button>
         </a>
-        <footer style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding-top: 5rem;">
+        <footer style="padding-top: 5rem;">
             <small>Yuichiro 2023 &copy; All Rights Reserved</small>
         </footer>
     </div>
