--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
         div {
             text-align: center;
         }
+
+        button {
+            margin-top: 2rem;
+            border: 2px solid white;
+            height: 50px;
+            border-radius: 5px;
+            background-color: #0d6efd;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+            margin-bottom: 2rem;
+        }
+        .btn1 {
+            margin-top: 1rem;
+            border: 2px solid white;
+            height: 50px;
+            border-radius: 5px;
+            background-color: black;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -23,15 +45,18 @@
         <h1 style="font-weight: bold; color: black; font-size: 20px; padding-bottom: 2rem;">Yuichiro Barcode Generator</h1>
         <canvas width="100" height="100" style="border: 2px solid black; margin-bottom: 1rem;" id="canvas"></canvas>
         <form onsubmit="generateQR(); return false;">
-            <label style="font-weight: bold;">Enter to generate your barcode</label> 
+            <label style="font-weight: bold;">Enter or paste link to generate your barcode</label>
             <br>
-            <input style="border: 2px solid black; width: 270px; margin-top: 1rem; text-align: center; margin-bottom: 1rem;" placeholder="paste your link here" id="qrInput" oninput="generateQR()" />
+            <input style="border: 2px solid black; width: 270px; margin-top: 2rem; text-align: center;" placeholder="paste your link here" id="qrInput" />
+            <br>
+            <!-- Tombol Generate Barcode -->
+            <button type="button" onclick="generateQR()">Generate Barcode</button>
         </form>
-        <a href="https://qrcodescan.in" style="text-decoration: none; cursor: pointer; font-weight: bold; margin-top: 1rem;">Check your barcode here</a>
+        <a href="https://qrcodescan.in" style="text-decoration: none; cursor: pointer; font-weight: bold;">Check your barcode here</a>
 
         <!-- Tombol unduh barcode -->
         <a id="downloadButton" download="barcode.png" style="display: none;">
-            <button onclick="downloadQR()" style="margin-top: 1rem; border: 2px solid white; height: 50px; border-radius: 5px; background-color:#0d6efd; color: white; font-weight: bold; cursor: pointer;">Download Barcode</button>
+            <button class="btn1" onclick="downloadQR()">Download Barcode</button>
         </a>
         <footer style="padding-top: 5rem;">
             <small>Yuichiro 2023 &copy; All Rights Reserved</small>
@@ -51,13 +76,10 @@
 
             // Tampilkan barcode terlebih dahulu
             // (Anda mungkin ingin menyesuaikan tata letak ini)
-            setTimeout(() => {
-                // Tampilkan tombol unduh
-                document.getElementById('downloadButton').style.display = 'block';
+            document.getElementById('downloadButton').style.display = 'block';
 
-                // Tampilkan alert setelah barcode terlihat
-                alert('Your barcode generated successfully! Want to download your barcode?');
-            }, 500);
+            // Tampilkan alert setelah barcode terlihat
+            alert('Your barcode generated successfully! Want to download your barcode?');
         }
 
         // Fungsi untuk mengunduh barcode
